# rgt

./: .gitignore  .project  README.md  ideias.txt  pom.xml
rgt-libs/: CMakeLists.txt  build_maven.bat  conanfile.py  pom.xml
rgt-libs/cmake/: HarbourCompiler.cmake
rgt-libs/distribution/: pom.xml  readme.txt  releaseAll.bat
rgt-libs/rgt-app-headers/: pom.xml
rgt-libs/rgt-app-headers/src/main/headers/: rgt.ch  rgt_app_api.h  rgt_app_connection.h
rgt-libs/rgt-app-lib/: CMakeLists.txt  pom.xml
rgt-libs/rgt-app-lib/src/main/c/: rgt_app_api.c  rgt_app_connection.c  rgt_app_hb_gt.c  rgt_app_xhb_gt.c
rgt-libs/rgt-app-lib/src/main/clipper/: rgt_app_init.prg
rgt-libs/rgt-common-headers/: pom.xml
rgt-libs/rgt-common-headers/src/main/headers/: rgt_channel.h  rgt_channel_bidirectional.h  rgt_channel_queue.h  rgt_channel_unidirectional.h  rgt_common.h  rgt_error.ch  rgt_error.h  rgt_log.h  rgt_rpc.h  rgt_screen.h  rgt_thread.h  rgt_types.h  rgt_util.h
rgt-libs/rgt-common-lib/: CMakeLists.txt  pom.xml
rgt-libs/rgt-common-lib/src/main/c/: rgt_channel.c  rgt_channel_bidirectional.c  rgt_channel_queue.c  rgt_channel_unidirectional.c  rgt_common.c  rgt_error.c  rgt_log.c  rgt_rpc.c  rgt_screen.c  rgt_thread.c  rgt_util.c
rgt-libs/rgt-terminal-headers/: pom.xml
rgt-libs/rgt-terminal-headers/src/main/headers/: rgt_trm_connection.h
rgt-libs/rgt-terminal-lib/: CMakeLists.txt  pom.xml
rgt-libs/rgt-terminal-lib/src/main/c/: rgt_trm_connection.c
rgt-server/: build.bat  pom.xml
rgt-server/rgt-admin-client/: nbactions.xml  pom.xml  rgt-client.bat  rgt-client.sh  servers-prod.ini  servers.ini  users.json
rgt-server/rgt-server/: go.mod  go.sum  pom.xml
rgt-server/rgt-server/admin/: admin_config_operations.go  admin_files_operations.go  admin_handler.go  admin_protocol.go  admin_service.go  (+5 more)
test/: pom.xml
test/rgt-app-exe/: pom.xml
test/rgt-terminal-exe/: pom.xml
(+204 files in other folders)
